Fix font spacing
Made the spacing of my font better

--- a/Web/ClientApp/src/app/home/home.component.css
+++ b/Web/ClientApp/src/app/home/home.component.css
@@ -179,3 +179,7 @@ span.tag {
     color: #551E19;
     background-color: #E6B17E;
 }
+
+.title-spacing {
+    margin-top: 0.83rem;
+}
